# BCI-RomeCup

./: .gitignore  README.md
BCI_Blinker11-13_20190324/: BCI_Blinker11-13_20190324.ino
BCI_Blinker11-13_Timers/: BCI_Blinker11-13_Timers.ino
BCI_NeuroRace/: BCI_NeuroRace.h  BitConversion.c  CMakeLists.txt  CommProtocol.h  boardInitializer.c  calibration.c  calibrator.c  control.c  controller.c  fftWorker.c  filtering.c  main.c  sampler.c  signalHandlers.c
BCI_NeuroRace/Testers/: socketLerci  socketLerci.c
BCI_NeuroSerial/: BCI_NeuroSerial.h  CMakeLists.txt  CommProtocol.h  SPI_Definitions.h  boardInitializer.c  calibration.c  calibrator.c  control.c  controller.c  fftWorker.c  filtering.c  main.c  sampler.c  signalHandlers.c
BCI_SamplingTest/: .directory  BCI_SamplingTest.h  BitConversion.c  CMakeLists.txt  boardInitializer.c  fftWorker.c  filtering.c  filters.txt  main.c  printer.c  sampler.c
BCI_SamplingTest/Executables/: BCI_SamplingTest_bp_4k_30s  BCI_SamplingTest_bp_4k_60s  BCI_SamplingTest_nf_4k_30s  BCI_SamplingTest_nf_4k_60s
Elaborazione Segnali BCI/: README.txt
Elaborazione Segnali BCI/MATLAB/BCI/: SignalAnalysis.m  SignalFilter.m  SignalImport.m  SignalParameters.m  SignalPlotAll.m  SignalPlotSamples.m  SignalPlotSpectrums.m  SignalProcess.m  filterSSData_bandPass_1-50.mat
Elaborazione Segnali BCI/MATLAB/Funzioni/: butterworth.m  filterSignal.m  monofft.m
Elaborazione Segnali BCI/Segnali/20190321/: 20190321_1.mat  20190321_dx_1.mat  20190321_signals.mat  20190321_sx_1.mat  signal_20190320_11.txt  signal_20190321_noFilter.txt  signal_20190321_noFilter_11only.txt  signal_20190321_noFilter_13only_4kSPS.txt  signal_20190321_noFilter_13only_4kSPS_40a.txt  signal_20190321_noFilter_13only_4kSPS_60a.txt
Elaborazione Segnali BCI/Segnali/20190322/ME/: signal_20190322_11only_60s.txt  signal_20190322_13only_30s.mat  signal_20190322_13only_30s.txt  signal_20190322_13only_60s.mat  signal_20190322_13only_60s.txt  signal_20190322_13only_60s_2.txt
Elaborazione Segnali BCI/Segnali/20190322/Manta Eduard/: signal_20190322_11only_30s.mat  signal_20190322_11only_30s.txt  signal_20190322_11only_60s.mat  signal_20190322_13only_60s_2.mat
Elaborazione Segnali BCI/Segnali/20190322/PA/: signal_20190322_11only_30s.mat  signal_20190322_11only_30s.txt  signal_20190322_13only_30s.mat  signal_20190322_13only_60s.mat
Elaborazione Segnali BCI/Segnali/20190322/Picco Alessandro/: signal_20190322_11only_60s.txt  signal_20190322_13only_30s.txt  signal_20190322_13only_60s.txt
Elaborazione Segnali BCI/Segnali/20190323/CF/: signal_noFilter_11only_30s.mat  signal_noFilter_11only_60s.mat  signal_noFilter_11only_60s.txt  signal_noFilter_13only_60s.mat
Elaborazione Segnali BCI/Segnali/20190328/EA/: signal_eyesClosed.txt  (+1 more)
Materiali/: COORDINATOR.xpro  RADIO.xpro  SpectrumAnalysis.m  ads1299_notes.txt  client.c  fftwTest.c  server.c  socketMaster.c
(+44 files in other folders)
